backend: Game object